Fix small screen layout bugs

--- a/microservices/app/imports/client/pages/DashboardPage/DashboardProgress/DashboardProgress.scss
+++ b/microservices/app/imports/client/pages/DashboardPage/DashboardProgress/DashboardProgress.scss
@@ -83,6 +83,7 @@ $step-circle-size: 25px;
   flex-basis: 25%;
   flex-direction: column;
   flex-grow: 1;
+  text-align: center;
 
   padding: 8px;
 
